--- a/.github/workflows/optimized-build.yml
+++ b/.github/workflows/optimized-build.yml
@@ -1,12 +1,7 @@
-name: Optimized Docker Build
+name: Optimized Docker Build (Deprecated)
 
 on:
-  push:
-    branches:
-      - main
-      - production
-    tags:
-      - 'v*'
+  # 已由 docker.yml 统一，保留手动触发以便排障时临时使用
   workflow_dispatch:
     inputs:
       environment:
@@ -15,8 +10,8 @@ on:
         default: 'preview'
         type: choice
         options:
-        - preview
-        - production
+          - preview
+          - production
 
 env:
   REGISTRY: ghcr.io
@@ -117,7 +112,8 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./Dockerfile.gofly
+        # 统一使用 MustKnow.md 指定的 Dockerfile
+        file: ./Dockerfile.standalone
         push: true
         platforms: linux/amd64
         tags: ${{ steps.meta.outputs.tags }}
