--- a/.github/workflows/autoads-saas-cicd.yml
+++ b/.github/workflows/autoads-saas-cicd.yml
@@ -1,18 +1,15 @@
-name: AutoAds SaaS CI/CD Pipeline
+name: AutoAds SaaS CI/CD Pipeline (Deprecated)
 
 on:
-  push:
-    branches: [ main, production ]
-    tags: [ 'v*' ]
-  pull_request:
-    branches: [ main ]
+  # 已由 docker.yml 统一，保留手动触发以便排障时临时使用
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: xxrenzhe/autoads
 
 jobs:
-  # Code quality checks
+  # 保留原有步骤结构以便需要时手动运行，但不再随 push/PR 自动触发
   lint-and-test:
     runs-on: ubuntu-latest
     steps:
@@ -190,7 +187,7 @@ jobs:
 
   # Deploy to preview environment (main branch)
   deploy-preview:
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: ${{ false }}  # 已由 docker.yml 统一流程，本步骤仅保留示例与文档
     needs: build-image
     runs-on: ubuntu-latest
     environment: preview
@@ -218,7 +215,7 @@ jobs:
 
   # Deploy to production environment (production branch or tags)
   deploy-production:
-    if: (github.ref == 'refs/heads/production' || startsWith(github.ref, 'refs/tags/v')) && github.event_name == 'push'
+    if: ${{ false }}  # 已由 docker.yml 统一流程，本步骤仅保留示例与文档
     needs: build-image
     runs-on: ubuntu-latest
     environment: production
@@ -293,7 +290,7 @@ jobs:
 
   # Performance and integration tests
   integration-test:
-    if: github.ref == 'refs/heads/main'
+    if: ${{ false }}  # 已由 docker.yml 统一流程，本步骤仅保留示例与文档
     needs: deploy-preview
     runs-on: ubuntu-latest
     steps:
