refactor: remove remaining 'changelink' mentions in code; accept ADSCENTER in token consume API; map to enum via computed string; rename rule engine methods and keys; update UI strings; update middleware/decorators naming

--- a/deployments/docker-compose/docker-compose.prod.yml
+++ b/deployments/docker-compose/docker-compose.prod.yml
@@ -4,7 +4,7 @@ version: '3.8'
 
 services:
   google-ads-automation:
-    image: ghcr.io/xxrenzhe/url-batch-checker:prod-latest
+    image: ghcr.io/xxrenzhe/autoads:prod-latest
     container_name: google-ads-automation-prod
     restart: unless-stopped
     environment:
