--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,8 @@
     "type-check": "tsc -p tsconfig.typecheck.json --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^5.17.25",
@@ -25,30 +27,18 @@
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tabs": "1.1.13",
     "@tanstack/react-query": "5.87.4",
+    "@types/node": "24.3.1",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "bcryptjs": "3.0.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "date-fns": "^2.30.0",
+    "dompurify": "^3.1.7",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.3.5",
-    "lucide-react": "^0.263.1",
-    "next": "15.3.5",
-    "next-auth": "^4.24.7",
-    "postcss": "^8.5.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-router-dom": "^6.21.1",
-    "react-toastify": "^9.1.3",
-    "recharts": "^2.8.0",
-    "sonner": "^1.3.1",
-    "tailwind-merge": "3.3.1",
-    "tailwindcss": "^3.4.0",
-    "typescript": "5.8.2",
-    "@types/node": "24.3.1"
-    "axios": "^1.7.7",
-    "dompurify": "^3.1.7",
     "exceljs": "^4.4.0",
     "framer-motion": "^11.11.7",
     "google-ads-api": "^19.0.0",
@@ -57,10 +47,24 @@
     "https-proxy-agent": "^7.0.4",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.263.1",
+    "next": "15.3.5",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.16",
+    "postcss": "^8.5.3",
     "puppeteer": "^23.6.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "socks-proxy-agent": "^8.0.3",
+    "sonner": "^1.3.1",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss": "^3.4.0",
+    "typescript": "5.8.2",
     "uuid": "^9.0.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
@@ -74,7 +78,3 @@
     "vitest": "3.2.4"
   }
 }
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
-    "date-fns": "^2.30.0",
-    "react-dropzone": "^14.2.3",
