refactor(adscenter): complete Chengelink -> AdsCenter rename across backend code, routes, metrics, audit, dashboard; update email wording; move module to internal/adscenter; switch endpoints to /api/adscenter/*

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# Database Configuration
-DATABASE_URL="postgresql://postgres:your_password@localhost:5432/admin_system_dev"
+# Database Configuration (MySQL 8.0)
+# 示例：mysql://<user>:<password>@<host>:<port>/<database>?parseTime=true&loc=Local
+DATABASE_URL="mysql://root:your_password@localhost:3306/autoads_dev?parseTime=true&loc=Local"
 DB_PASSWORD="your_secure_password"
 
 # Redis Configuration
@@ -51,6 +52,12 @@ GOOGLE_ADS_CUSTOMER_ID="1234567890"
 
 # SimilarWeb API Configuration
 SIMILARWEB_API_URL="https://data.similarweb.com/api/v1/data"
+
+# BatchOpen AutoClick Configuration
+# 美国地区默认代理获取接口（可在管理台热更新）
+Proxy_URL_US="https://api.iprocket.io/api?username=com49692430&password=Qxi9V59e3kNOW6pnRi3i&cc=ROW&ips=1&type=-res-&proxyType=http&responseType=txt"
+# 每小时点击次数偏离平均值的程度（0~1），0.3 表示 ±30% 浮动
+AutoClick_Count_Variance_Hour=0.3
 
 # Application Configuration
 NODE_ENV="development"
