--- a/Dockerfile.standalone
+++ b/Dockerfile.standalone
@@ -14,7 +14,7 @@ RUN npm run build
 
 ############################
 # Next.js build (apps/frontend)
-FROM node:20-alpine AS next
+FROM node:20-bookworm-slim AS next
 WORKDIR /frontend
 ENV NODE_ENV=production \
     NEXT_TELEMETRY_DISABLED=1 \
