--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "gofly:docker:run": "docker run --rm -p 8080:8080 -v $(pwd)/gofly_admin_v3/config.yaml:/app/gofly_admin_v3/config.yaml gofly-admin:latest"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "8.2.2"
   },
   "engines": {
     "node": ">=20.0.0",
@@ -58,8 +58,8 @@
   "author": "AutoAds Team",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "6.16.0",
     "@types/react": "18.3.18",
-    "@types/react-dom": "18.3.5",
-    "@prisma/client": "6.16.0"
+    "@types/react-dom": "18.3.5"
   }
 }
