--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 *.out
 *.prof
 *.log
-*
+go/pkg/mod/
+
 # Node.js
 node_modules
 npm-debug.log
@@ -19,10 +20,9 @@ pnpm-debug.log
 .pnpm-store
 .env
 .env*.local
-.DS_Store
 
 # IDEs
-.idea
+.idea/
 .vscode/
 *.swp
 *.swo
@@ -32,10 +32,6 @@ build/
 dist/
 bin/
 target/
-
-# Logs
-logs/
-*.log
 
 # OS generated files
 .DS_Store
