Update dev environment

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,21 @@
-.git
-.gitignore
-.dockerignore
-.aiexclude
-dev.nix
-*.md
-*.log
-npm-debug.log
-yarn-error.log
-pnpm-debug.log
-node_modules
-.env
-.env*.local
-.DS_Store
+**/.git
+**/.gitignore
+**/.dockerignore
+**/.aiexclude
+**/dev.nix
+**/*.md
+**/*.log
+**/npm-debug.log
+**/yarn-error.log
+**/pnpm-debug.log
+**/node_modules
+**/.env
+**/.env*.local
+**/.DS_Store
+**/apps/frontend/node_modules
+**/apps/frontend/.next
+**/go/pkg/mod
+**/go.sum
+**/go.work.sum
+**/result
+**/.direnv
