--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.prof
 *.log
 go/pkg/mod/
+go.sum
+go.work.sum
 
 # Node.js
 node_modules
@@ -20,6 +22,8 @@ pnpm-debug.log
 .pnpm-store
 .env
 .env*.local
+.next/
+*.tsbuildinfo
 
 # IDEs
 .idea/
@@ -32,7 +36,12 @@ build/
 dist/
 bin/
 target/
+*.bak
 
 # OS generated files
 .DS_Store
 Thumbs.db
+
+# Nix
+result
+.direnv/
