--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,55 @@
-# Go
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.test
-*.out
-*.prof
-*.log
-go/pkg/mod/
-go.sum
-go.work.sum
-
 # Node.js
-node_modules
-npm-debug.log
-yarn-error.log
-pnpm-debug.log
+node_modules/
 .pnp
 .pnp.js
+.yarn/
 .pnpm-store
+.npm/
+
+# Next.js / Frontend
+.next/
+out/
+build/
+dist/
+storybook-static/
+*.tsbuildinfo
+apps/frontend/.next/
+
+# Go Microservices
+services/*/bin/
+services/*/*.log
+go.work.sum
+go/pkg/mod/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment variables
 .env
 .env*.local
-.next/
-*.tsbuildinfo
+.env.development.local
+.env.test.local
+.env.production.local
 
-# IDEs
+# IDE & Editor Config
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# Build artifacts
-build/
-dist/
-bin/
-target/
-*.bak
+*.iml
 
 # OS generated files
 .DS_Store
 Thumbs.db
 
-# Nix
-result
+# Nix environment
+result*
 .direnv/
+*.bak
+
+# Project IDX specific
+.idx/
