--- a/services/workflow/Dockerfile
+++ b/services/workflow/Dockerfile
@@ -1,5 +1,5 @@
-# services/workflow/Dockerfile
-FROM golang:1.21-alpine
+# Dockerfile for workflow service
+FROM golang:1.25-alpine
 
 WORKDIR /app
 
@@ -8,7 +8,9 @@ RUN go mod download
 
 COPY . .
 
-RUN go build -o /workflow-service ./cmd/server
+RUN go build -o /workflow-service ./cmd/server && \
+    go clean -cache
 
 EXPOSE 8080
-CMD ["/workflow-service"]
+
+CMD [ "/workflow-service" ]
