--- a/services/billing/Dockerfile
+++ b/services/billing/Dockerfile
@@ -1,17 +1,32 @@
-# Dockerfile for billing service
-FROM golang:1.25-alpine
+# Use the official Golang image to create a build artifact.
+# This is known as a multi-stage build.
+FROM golang:1.25-alpine as builder
 
+# Set the Current Working Directory inside the container
 WORKDIR /app
 
-COPY go.mod ./
-COPY go.sum ./
-RUN go mod download
+# Copy go mod and sum files
+# COPY go.mod go.sum ./
 
+# Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
+# RUN go mod download
+
+# Copy the source code
 COPY . .
 
-RUN go build -o /billing-service ./cmd/server && \
-    go clean -cache
+# Build the Go app
+RUN CGO_ENABLED=0 GOOS=linux go build -o /billing-service .
 
+# Start a new stage from scratch for a smaller image
+FROM alpine:latest
+
+WORKDIR /
+
+# Copy the Pre-built binary file from the previous stage
+COPY --from=builder /billing-service /billing-service
+
+# Expose port 8080 to the outside world
 EXPOSE 8080
 
-CMD [ "/billing-service" ]
+# Command to run the executable
+CMD ["/billing-service"]
