--- a/services/offer/Dockerfile
+++ b/services/offer/Dockerfile
@@ -1,17 +1,14 @@
-# Dockerfile for offer service
-FROM golang:1.25-alpine
-
+# Use the official Golang image to create a build artifact.
+FROM golang:1.25-alpine as builder
 WORKDIR /app
-
-COPY go.mod ./
-COPY go.sum ./
+RUN apk add --no-cache git
+COPY go.mod go.sum ./
 RUN go mod download
-
 COPY . .
-
-RUN go build -o /offer-service ./cmd/server && \
-    go clean -cache
-
+RUN CGO_ENABLED=0 GOOS=linux go build -o /offer-service .
+# Start a new stage from scratch for a smaller image
+FROM alpine:latest
+WORKDIR /
+COPY --from=builder /offer-service /offer-service
 EXPOSE 8080
-
-CMD [ "/offer-service" ]
+CMD ["/offer-service"]
