--- a/services/siterank/Dockerfile
+++ b/services/siterank/Dockerfile
@@ -1,16 +1,13 @@
-# Dockerfile for siterank service
-FROM golang:1.25-alpine
-
+# Use the official Golang image to create a build artifact.
+FROM golang:1.25-alpine as builder
 WORKDIR /app
-
 COPY go.mod go.sum ./
 RUN go mod download
-
 COPY . .
-
-RUN go build -o /siterank-service ./cmd/server && \
-    go clean -cache
-
+RUN CGO_ENABLED=0 GOOS=linux go build -o /siterank-service .
+# Start a new stage from scratch for a smaller image
+FROM alpine:latest
+WORKDIR /
+COPY --from=builder /siterank-service /siterank-service
 EXPOSE 8080
-
-CMD [ "/siterank-service" ]
+CMD ["/siterank-service"]
