--- a/services/adscenter/Dockerfile
+++ b/services/adscenter/Dockerfile
@@ -1,17 +1,13 @@
-# Dockerfile for adscenter service
-FROM golang:1.25-alpine
-
+# Use the official Golang image to create a build artifact.
+FROM golang:1.25-alpine as builder
 WORKDIR /app
-
-COPY go.mod ./
-COPY go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
-
 COPY . .
-
-RUN go build -o /adscenter-service ./cmd/server && \
-    go clean -cache
-
+RUN CGO_ENABLED=0 GOOS=linux go build -o /adscenter-service .
+# Start a new stage from scratch for a smaller image
+FROM alpine:latest
+WORKDIR /
+COPY --from=builder /adscenter-service /adscenter-service
 EXPOSE 8080
-
-CMD [ "/adscenter-service" ]
+CMD ["/adscenter-service"]
