update worflow service

--- a/services/offer/Dockerfile
+++ b/services/offer/Dockerfile
@@ -2,8 +2,13 @@
 FROM golang:1.25-alpine as builder
 WORKDIR /app
 RUN apk add --no-cache git
+RUN git config --global user.name "Cloud Build"
+RUN git config --global user.email "builder@gcp.com"
+RUN git config --global url."https://github.com/".insteadOf "git@github.com:"
+RUN git config --global credential.helper ''
+ENV GIT_TERMINAL_PROMPT=0
 COPY go.mod go.sum ./
-RUN go mod download
+RUN GOPROXY=https://proxy.golang.org,direct GOPRIVATE="" go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o /offer-service .
 # Start a new stage from scratch for a smaller image
