--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,9 @@ http {
     upstream workflow_service {
         server workflow:8080;
     }
+    upstream console_service {
+        server console:8080;
+    }
 
     server {
         listen 80;
@@ -31,6 +34,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
 
         location /api/v1/billing/ {
@@ -38,6 +42,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
 
         location /api/v1/offer/ {
@@ -45,6 +50,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
 
         location /api/v1/siterank/ {
@@ -52,6 +58,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
 
         location /api/v1/batchopen/ {
@@ -59,6 +66,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
 
         location /api/v1/adscenter/ {
@@ -66,6 +74,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
 
         location /api/v1/workflow/ {
@@ -73,11 +82,32 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
+
+        # 移除桥接服务路由；生产使用 API Gateway；前端 Blog 走 Firebase Web SDK 直读 Firestore
 
         # Health check for the gateway itself
         location /healthz {
             return 200 'OK';
+        }
+
+        # Admin Console (隐藏入口，仅URL直达)
+        location /console/ {
+            proxy_pass http://console_service/console/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
+        }
+
+        # Console API
+        location /api/v1/console/ {
+            proxy_pass http://console_service/api/v1/console/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Authorization $http_authorization;
         }
     }
 }
