--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,29 @@
-# Ignore everything by default
-**
+# General ignores (root context builds only; per-service builds use their own context)
+.git/
+.gocache/
+node_modules/
+logs/
+.env
+.env.*
+secrets/*
+!secrets/README.md
+**/*.log
 
-# Allow specific files required for Go builds
+# Ignore large build outputs
+dist/
+build/
+out/
+.next/
+
+# Keep module/work files if needed
 !go.mod
 !go.sum
 !go.work
 
-# Allow the source code of all services
-!services/
+# Keep services and frontend code for builds
+!services/**
+!apps/frontend/**
 
-# Allow the frontend app, as it has its own Dockerfile and .dockerignore
-!apps/frontend/
-
-# Allow specific Dockerfiles if they exist at the root
+# Keep Dockerfiles
 !Dockerfile
 !Dockerfile.*
