--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ REDIS_URL="redis://default:your_redis_password@your_redis_host:your_redis_port"
 NEXT_PUBLIC_DOMAIN="localhost:3000"  # 开发环境 | autoads.dev (生产) | www.urlchecker.dev (预览)
 NEXT_PUBLIC_DEPLOYMENT_ENV="development"  # development/preview/production
 NEXT_PUBLIC_CUSTOMER_SERVICE_QR="/Customer-service-QR-code.jpg"  # 客服二维码图片路径（放置于 apps/frontend/public），可替换为完整 URL
+NEXT_PUBLIC_FIRESTORE_DB_ID=firestoredb  # Firestore 数据库ID（如启用非默认数据库）
 
 # NextAuth v5 Configuration
 # 注意：若启用加密的 JWT 会话，建议使用 64 字节（512-bit）密钥
