--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -51,6 +51,8 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "15.3.5",
     "exceljs": "^4.4.0",
+    "firebase": "^10.13.2",
+    "jose": "^5.9.3",
     "framer-motion": "^11.11.7",
     "google-ads-api": "^19.0.0",
     "google-auth-library": "^9.14.2",
